<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
>

    <!-- Login progress -->

    <ScrollView
        android:id="@+id/create_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/crate_register_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/create_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_title"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    tools:hint="@string/create_title" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/create_deposit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_deposit"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/create_rooms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_rooms"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/create_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_area"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/create_street"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/craete_street"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow android:gravity="center">

                    <com.android.volley.toolbox.NetworkImageView
                        android:id="@+id/crtImg1"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="5dp" />

                    <com.android.volley.toolbox.NetworkImageView
                        android:id="@+id/crtImg2"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp" />
                </TableRow>

                <TableRow android:gravity="center">

                    <com.android.volley.toolbox.NetworkImageView
                        android:id="@+id/crtImg3"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="5dp" />

                    <com.android.volley.toolbox.NetworkImageView
                        android:id="@+id/crtImg4"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:src="@mipmap/ic_photo" />
                </TableRow>
            </TableLayout>
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/ivWifi"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignEnd="@+id/txtArea"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="15dp"
                    android:alpha="0.3"
                    app:srcCompat="@drawable/bwirelessnetwork" />

                <ImageView
                    android:id="@+id/ivHDTV"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:alpha="0.3"
                    app:srcCompat="@drawable/bhdtv" />

                <ImageView
                    android:id="@+id/ivBBed"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:alpha="0.3"
                    app:srcCompat="@drawable/bbed" />

                <ImageView
                    android:id="@+id/ivSBed"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:alpha="0.3"
                    app:srcCompat="@drawable/bsinglebed"
                    tools:srcCompat="@drawable/bsinglebed" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="5dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/ivAir"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="15dp"
                    android:alpha="0.3"
                    app:srcCompat="@drawable/bair" />

                <ImageView
                    android:id="@+id/ivFridge"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:alpha="0.3"
                    app:srcCompat="@drawable/bfridge" />

                <ImageView
                    android:id="@+id/ivStove"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:alpha="0.3"
                    app:srcCompat="@drawable/bstoveoven" />

                <ImageView
                    android:id="@+id/ivWash"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:alpha="0.3"
                    app:srcCompat="@drawable/bwashingmachine" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/ivBath"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="15dp"
                    android:alpha="0.3"
                    app:srcCompat="@drawable/bbathtub" />

                <ImageView
                    android:id="@+id/ivMicro"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:alpha="0.3"
                    app:srcCompat="@drawable/bmicrowave" />

                <ImageView
                    android:id="@+id/ivLandLine"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:alpha="0.3"
                    app:srcCompat="@drawable/blandline" />

                <ImageView
                    android:id="@+id/ivFirePlace"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:alpha="0.3"
                    app:srcCompat="@drawable/bfireplace" />
            </TableRow>



            <Button
                android:id="@+id/create_property"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@android:color/holo_blue_dark"
                android:text="@string/create_create"
                android:textColor="@android:color/background_light"
                android:textStyle="bold"
                tools:text="Register" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>